Added scss maps to hidden files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "files.exclude": {
     "src/_framework/": true,
     ".vscode": true,
-    ".idea": true
+    ".idea": true,
+    "**/*.css.map": true
   },
 
   "liveSassCompile.settings.formats": [
