--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 
 # don't ignore scopes (used to hide certain files/folders)
 !.idea/scopes/*
+
+# don't ignore file watchers (used for scss)
+!.idea/file_watchers/*
+!.idea/watcherTasks.xml
+
