Added LICENSE to hidden files for vscode
also added some empty lines inbetween stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
   "files.exclude": {
     "src/_framework/": true,
+
     ".vscode": true,
     ".idea": true,
+
+    "LICENSE": true,
+    
     "**/*.css.map": true
   },
 
