--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
     {
         "format": "compressed",
         "extensionName": ".min.css",
-        "savePath": "~/../css/"
+        "savePath": "/style/css/"
     },
   ]
 }
